# SwiftPackLabel

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
migrations/: update_operator_wild_responsibility.sql
src/: __init__.py  app.py  db.py  insert_data.py  logger.py  main.py  response.py  routers.py  routes.py  settings.py  utils.py
src/archives/: archives.py  router.py  schema.py  utils.py
src/auth/: dependencies.py  init_superuser.py  router.py  schema.py  service.py
src/available_quantity/: repository.py  router.py  schema.py  service.py
src/cache/: __init__.py  decorators.py  global_cache.py  router.py  warm_up_functions.py
src/canceled_orders/: __init__.py  router.py  schema.py  service.py
src/cards/: __init__.py  cards.py  router.py  schema.py
src/celery_app/: __init__.py  celery.py
src/excel_data/: router.py  schema.py  service.py
src/images/: router.py  schema.py  service.py
src/middleware/: __init__.py  duplicate_request.py
src/models/: archives.py  article.py  assembly_task_status.py  card_data.py  delivered_supplies.py  final_supplies.py  hanging_supplies.py  onec_delivery_log.py  order_status_log.py  orders_wb.py  product_availability.py  products.py  qr_scan.py  qr_scan_db.py  shipment_of_goods.py  stock.py  supply_operations.py  wild_logs.py
src/orders/: __init__.py  order_status_service.py  orders.py  router.py  schema.py
src/pdf_parser/: __init__.py  excel_parser.py  router.py  schema.py  service.py
src/qr_parser/: router.py  schema.py  service.py
src/service/: cards_service.py  pdf_parser.py  service_pdf.py  (+2 more)
(+18 files in other folders)
