[project]
name = "swiftpacklabel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fpdf2>=2.8.2",
    "loguru>=0.7.3",
    "pillow>=11.1.0",
    "pydantic-settings>=2.8.1",
    "qrcode>=8.0",
    "requests>=2.32.3",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]
