[project]
name = "swiftpacklabel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "fpdf2>=2.8.2",
    "jwt>=1.3.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pillow>=11.1.0",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "qrcode>=8.0",
    "requests>=2.32.3",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
]
